v0.1.0-β.11 | Features Dashboard Animation working on desktop but issue on mobile and tablet

--- a/app/globals.css
+++ b/app/globals.css
@@ -97,6 +97,13 @@
   .companyPage .carouselWrapper .box img{
     @apply w-[100%] h-[75%];
   }
+
+  .colored-cards .colored-card {
+    @apply flex flex-col min-h-[20rem] bg-transparent rounded-lg shadow-md;;
+  }
+  .colored-cards .spacer {
+    @apply mb-[10rem];
+  }
 }
 
 
